testdata/zkc/invalid/memory_invalid_05.zkc
;;error:6:7-8:unknown symbol
pub input data(address:u16) -> (word:u16)

fn test(index:u32) -> (r:u16) {
  ;; write output
  r = data[index]
  ;; done
  return
}
